name:                enigma
version:             1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Enigma
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds