name:                enigma
version:             1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Colin Woodbury
maintainer:          colingw@gmail.com
-- copyright:
category:            Cryptography
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Enigma
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , transformers
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds

test-suite enigma-tests
  type:                exitcode-stdio-1.0

  build-depends:       base >=4.9 && <4.10
                     , enigma
                     , tasty >= 0.11 && < 0.12
                     , tasty-quickcheck >= 0.8 && < 0.9

  hs-source-dirs:      test
  main-is:             Test.hs
  default-language:    Haskell2010
  ghc-options: -fwarn-unused-imports -fwarn-unused-binds -threaded
